[GTK] 2.42.0 doesn't support WebGL with GBM disabled under X11 https://bugs.webkit.org/show_bug.cgi?id=261653

Reviewed by Alejandro G. Castro.

Initialize m_anglePlatform and m_angleNativeDisplay on X11 too.

* Source/WebCore/platform/graphics/x11/PlatformDisplayX11.cpp:
(WebCore::PlatformDisplayX11::gtkEGLDisplay):
(WebCore::PlatformDisplayX11::initializeEGLDisplay):

Canonical link: https://commits.webkit.org/268844@main